--- a/package.json
+++ b/package.json
@@ -4,18 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "dev": "ts-node-dev --no-notify --respawn --poll --transpile-only src/index"
   },
   "dependencies": {
+    "@prisma/client": "^4.16.0",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.16.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^5.1.3"
+    "react-dom": "^18.2.0"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^20.3.1",
+    "prisma": "^4.16.0",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.1.3"
+  }
 }
