--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^4.16.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuid": "^9.0.0"
   },
   "keywords": [],
   "author": "",
