--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -86,4 +86,4 @@ jobs:
       - name: Move cache
         run: |
           rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp-develop/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
