--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "typescript": "^5.1.3",
     "uuid": "^9.0.0"
   },
   "keywords": [],
@@ -23,7 +24,6 @@
     "@types/node": "^20.3.1",
     "prisma": "^4.16.0",
     "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.1.3"
+    "ts-node-dev": "^2.0.0"
   }
 }
