--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -74,12 +74,12 @@ jobs:
           username: _json_key
           password: ${{ secrets.KEY }}
 
-      - name: Build and push
+      - name: build and push
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
-          tags: asia-northeast3-docker.pkg.dev/easy-wms/ez-courier-build-store/test:latest
+          tags: asia-northeast3-docker.pkg.dev/easy-wms/ez-api-build-store/develop:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
 
