--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -5,8 +5,26 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
-
 jobs:
+  migration:
+    runs-on: ubuntu-20.04
+
+    steps:
+      - uses: mattes/gce-cloudsql-proxy-action@v1
+        with:
+          creds: ${{ secrets.KEY }}
+          instance: easy-wms:northamerica-northeast2:test
+
+      - name: setting .env
+        run: |
+          echo "MYSQL_URL=${{ secrets.MYSQL_URL }}" >> .env
+          cat .env
+
+      - name: prisma migraiton
+        run: |
+          npm install prisma
+          npx prisma migrate deploy
+
   # migration:
   #   name: db migraiton
   #   runs-on: ${{ matrix.os }}
@@ -45,45 +63,45 @@ jobs:
   #       run: |
   #         npx prisma migrate deploy
 
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+  # build:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v3
 
-      - name: "print"
-        run: |
-          ls -al
-          pwd
+  #     - name: "print"
+  #       run: |
+  #         ls -al
+  #         pwd
 
-      - name: Cache Docker layers
-        uses: actions/cache@v3
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
+  #     - name: Cache Docker layers
+  #       uses: actions/cache@v3
+  #       with:
+  #         path: /tmp/.buildx-cache
+  #         key: ${{ runner.os }}-buildx-${{ github.sha }}
+  #         restore-keys: |
+  #           ${{ runner.os }}-buildx-
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v2
 
-      - name: Login to GAR
-        uses: docker/login-action@v2
-        with:
-          registry: asia-northeast3-docker.pkg.dev
-          username: _json_key
-          password: ${{ secrets.KEY }}
+  #     - name: Login to GAR
+  #       uses: docker/login-action@v2
+  #       with:
+  #         registry: asia-northeast3-docker.pkg.dev
+  #         username: _json_key
+  #         password: ${{ secrets.KEY }}
 
-      - name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: asia-northeast3-docker.pkg.dev/easy-wms/ez-test-build-store/develop:latest
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+  #     - name: Build and push
+  #       uses: docker/build-push-action@v2
+  #       with:
+  #         context: .
+  #         push: true
+  #         tags: asia-northeast3-docker.pkg.dev/easy-wms/ez-api-build-store/develop:latest
+  #         cache-from: type=local,src=/tmp/.buildx-cache
+  #         cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
 
-      - name: Move cache
-        run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+  #     - name: Move cache
+  #       run: |
+  #         rm -rf /tmp/.buildx-cache
+  #         mv /tmp/.buildx-cache-new /tmp/.buildx-cache
